# portfolio

./: .gitignore  pyproject.toml  railway.toml
.husky/: pre-commit
backend/: Dockerfile  conftest.py  main.py  pyproject.toml
backend/agent/: graph_agent.py
backend/mcp/: tools.py
backend/store/: oxigraph.py
backend/tests/: test_agui_layer.py  test_mcp_layer.py  test_ontology_layer.py
data/: portfolio.ttl
frontend/: .lintstagedrc.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/.next/: prerender-manifest.json  react-loadable-manifest.json  trace
frontend/.next/cache/: .previewinfo  .rscinfo
frontend/.next/server/: middleware-react-loadable-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend/public/: graph.jsonld
frontend/src/__tests__/: agui.test.ts  aguiListener.test.ts  graphTransform.test.ts  primitives.test.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/lib/: agui.ts  api.ts  context.jsonld  graphTransform.ts  types.ts  useSession.ts
frontend/src/styles/: tokens.css
openspec/: project.md
openspec/changes/2026-03-18-add-chat-interface/: design.md  proposal.md  tasks.md
openspec/changes/add-agui-layer/: design.md  proposal.md  tasks.md
openspec/changes/add-content-population/: tasks.md
openspec/changes/add-dev-tooling/: tasks.md
openspec/changes/add-graph-visualization/: tasks.md
openspec/changes/add-hosting-deployment/: deploy-checklist.md  tasks.md
openspec/specs/agui-agent/: spec.md
schema/: instances.yml  portfolio.yml
scripts/: generate.py  pyproject.toml
(+78 files in other folders)
